RouterClient: replace deprecated URL(String) with URI.create(...).toURL()
CodeQL flagged the URL(String) constructor (deprecated since JDK 20, no
validation/encoding). URI.create(...).toURL() is the non-deprecated
equivalent and is available on Java 8, so the bytecode floor is
unaffected. Behavior identical for the fixed localhost/router URLs;
9/9 RouterClientTest green.

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01XVMuGj2shABrHWJ9sNqLqX